core: Fixed Java code to use StandardCharsets.UTF_8